# chromadb-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  chroma-config.yaml  docker-compose.yml
.github/workflows/: manual-release.yml  tests.yml
examples/: CMakeLists.txt
examples/src/: main.cpp
include/ChromaDB/: APIClient.h  ChromaApiClient.h  ChromaDB.h  Client.h  Collection.h  Exception.h  QueryResponseResource.h  Utils.h
include/ChromaDB/Client/: ChromaApiClient.h  Client.h
include/ChromaDB/Embeddings/: CohereEmbeddingFunction.h  EmbeddingFunction.h  EmbeddingResource.h  JinaEmbeddingFunction.h  LocalOllamaEmbeddingFunction.h  OpenAIEmbeddingFunction.h  TogetherAIEmbeddingFunction.h  VoyageAIEmbeddingFunction.h
include/ChromaDB/Exceptions/: ChromaAuthorizationException.h  ChromaConnectionException.h  ChromaDimensionalityException.h  ChromaException.h  ChromaInvalidArgumentException.h  ChromaInvalidCollectionException.h  ChromaNotFoundException.h  ChromaRequestException.h  ChromaTypeException.h  ChromaUniqueConstraintException.h  ChromaValueException.h  Exception.h
include/ChromaDB/Resources/: Collection.h  EmbeddingResource.h  QueryResponseResource.h  UserIdentity.h
include/ChromaDB/Utils/: Utils.h
include/OpenSSL/html/man1/: openssl-cmp.html
include/OpenSSL/html/man3/: EVP_EncryptInit.html  OSSL_CMP_MSG_get0_header.html  SSL_CONF_cmd.html
include/OpenSSL/html/man7/: OSSL_PROVIDER-base.html  ossl-guide-migration.html
include/OpenSSL/lib/: libcrypto.lib  libssl.lib
include/OpenSSL/ssl/: fipsmodule.cnf
src/ChromaDB/: APIClient.cpp  ChromaApiClient.cpp  Client.cpp  Collection.cpp
src/ChromaDB/Client/: ChromaApiClient.cpp  Client.cpp
src/ChromaDB/Embeddings/: CohereEmbeddingFunction.cpp  EmbeddingFunction.cpp  JinaEmbeddingFunction.cpp  LocalOllamaEmbeddingFunction.cpp  OpenAIEmbeddingFunction.cpp  TogetherAIEmbeddingFunction.cpp  VoyageAIEmbeddingFunction.cpp
src/ChromaDB/Exceptions/: ChromaException.cpp  Exception.cpp
src/ChromaDB/Resources/: Collection.cpp
tests/: test_client.cpp
